--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "element-plus": "^2.2.13",
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -21,6 +22,8 @@
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.0",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.11.1",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
   },
