--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "element-plus": "^2.2.13",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/node": "^18.7.6",
     "@vitejs/plugin-vue": "^3.0.3",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
