--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "skipLibCheck": true,
     "types": ["element-plus/global"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","src/**/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
