--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
+    "lint": "eslint --fix",
+    "prettier": "prettier --write .",
     "commit": "cz"
   },
   "dependencies": {
