--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
+    "sass": "^1.54.5",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.11.1",
     "unplugin-vue-components": "^0.22.4",
