--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "element-plus": "^2.2.13",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
