--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev:ssr": "cross-env NODE_ENV=development node server",
+    "prod:ssr": "cross-env NODE_ENV=production node server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --outDir dist/server --ssr src/entry-server.ts",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
@@ -14,6 +18,7 @@
   "dependencies": {
     "element-plus": "^2.2.13",
     "express": "^4.18.1",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.3",
@@ -29,6 +34,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "axios": "^0.27.2",
     "commitizen": "^4.2.5",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
