feat: 动态加载组件，使用 manifest 文件进行预加载静态资源

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "vite",
     "dev:ssr": "cross-env NODE_ENV=development node server",
     "prod:ssr": "cross-env NODE_ENV=production node server",
-    "build:client": "vite build --outDir dist/client",
+    "build:client": "vite build --outDir dist/client --ssrManifest",
     "build:server": "vite build --outDir dist/server --ssr src/entry-server.ts",
+    "build:ssr": "npm run build:client && npm run build:server",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
