--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
