chore(commitlint): 代码提交前进行 eslint 校验并启动自动修复功能

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "lint": "eslint --fix",
+    "lint": "eslint src/**/*.{js,jsx,vue,ts,tsx} --fix",
+    "lint:fix": "eslint --fix",
     "prettier": "prettier --write .",
     "commit": "cz"
   },
