--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.1",
     "normalize.css": "^8.0.1",
     "serve-static": "^1.15.0",
+    "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.3",
