--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "sass": "^1.54.5",
+    "terser": "^5.15.0",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.11.1",
     "unplugin-vue-components": "^0.22.4",
